--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="assets/css/theme.css">
   
   <!-- Custom CSS Template -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
   <link rel="stylesheet" href="assets/css/custom.css">
 
   
@@ -62,6 +64,8 @@
   <script src="assets/js/components/hs.show-animation.js"></script>
   <script src="assets/js/components/hs.svg-injector.js"></script>
   <script src="assets/js/components/hs.go-to.js"></script>
+
+  <script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 
